Corrected the alignment of the flash messages upon login

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -528,7 +528,7 @@
         flex-direction: column;
         align-items: center;
 
-        & .alert {
+        & .alerts {
             width: 95% !important;
         }
 
